fixed marquee only on tablet

--- a/lucille-portfolio/src/styles/sections/_singleWorks.scss
+++ b/lucille-portfolio/src/styles/sections/_singleWorks.scss
@@ -6,6 +6,11 @@
 //   padding-inline: 0;
 // }
 
+h2.selected-works,
+h2.lets-work-togeth {
+  text-align: center;
+}
+
 #single-works h4,
 #single-works h3 {
   font-family: "Birdy";
